# learnswara

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  create_test_wav.py  main.dart  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
android/: build.gradle  setup_soundtouch.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  setup_soundtouch.sh  soundtouch_wrapper.cpp  wav_reader.cpp  wav_reader.h  wav_writer.cpp  wav_writer.h
android/app/src/main/cpp/include/: soundtouch_wrapper.h
android/app/src/main/cpp/jni/: Android.mk  Application.mk
android/app/src/main/java/com/example/swarav1/: SoundTouchWrapper.java
android/app/src/main/kotlin/com/example/swarav1/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/soundtouch/: soundtouch_bindings.dart  soundtouch_processor.dart
macos/: CMakeLists.txt
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
swarav1/: .gitignore  README.md  log.txt  pubspec.yaml
swarav1/android/app/: build.gradle
swarav1/android/app/src/main/cpp/: setup_soundtouch.sh
swarav1/android/app/src/main/kotlin/com/example/swarav1/: MainActivity.kt
swarav1/lib/: main.dart
swarav1/lib/soundtouch_app/: CMakeLists.txt  install_manifest.txt  libSoundTouchDLL.dylib
swarav1/linux/: CMakeLists.txt  my_application.cc
swarav1/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
swarav1/macos/Runner/Configs/: AppInfo.xcconfig
swarav1/web/: index.html  manifest.json
swarav1/windows/: CMakeLists.txt
swarav1/windows/runner/: main.cpp
test/: widget_test.dart
windows/runner/: Runner.rc
